# cccl

./: .clangd  CMakeLists.txt  CMakePresets.json  CMakeUserPreset.json
.github/workflows/: pr.yml
benchmarks/: CMakeLists.txt
benchmarks/nvbench_helper/: CMakeLists.txt
c/parallel/: CMakeLists.txt
c/parallel/src/: for.cu  merge_sort.cu  reduce.cu  scan.cu  segmented_reduce.cu  transform.cu  unique_by_key.cu
c/parallel/src/for/: for_op_helper.cpp
c/parallel/src/kernels/: iterators.cpp  operators.cpp
c/parallel/src/util/: scan_tile_state.cu
c/parallel/test/: CMakeLists.txt  algorithm_execution.h  test_segmented_reduce.cpp  test_util.h
c2h/: CMakeLists.txt
ci/: build_thrust.sh  matrix.yaml
cmake/: CCCLBuildCompilerTargets.cmake
cub/: CMakeLists.txt
cub/benchmarks/: CMakeLists.txt
cub/benchmarks/bench/copy/: memcpy.cu
cub/benchmarks/bench/merge_sort/: keys.cu  pairs.cu
cub/benchmarks/bench/partition/: if.cu
cub/benchmarks/bench/radix_sort/: keys.cu  pairs.cu
cub/benchmarks/bench/reduce/: base.cuh  deterministic.cu
cub/benchmarks/nvbench_helper/: CMakeLists.txt  nvbench_helper.cuh
cub/benchmarks/nvbench_helper/nvbench_helper/: nvbench_helper.cu  nvbench_helper.cuh
cub/benchmarks/nvbench_helper/test/: gen_distribution.cu  gen_entropy.cu  gen_range.cu  gen_seed.cu
cub/cmake/: CubBuildCompilerTargets.cmake
cub/cub/: util_debug.cuh  util_type.cuh
cub/cub/agent/: agent_reduce.cuh  agent_select_if.cuh  single_pass_scan_operators.cuh
cub/cub/block/: block_load.cuh
cub/cub/detail/: rfa.cuh
cub/cub/device/: device_reduce.cuh  device_scan.cuh
cub/cub/thread/: thread_reduce.cuh
cub/cub/warp/: warp_load.cuh
cub/docs/: gen_docs.bash
cub/test/: CMakeLists.txt  catch2_test_device_bulk.cu  catch2_test_device_merge_sort.cu  catch2_test_device_merge_sort_iterators.cu  catch2_test_device_partition_flagged.cu  catch2_test_device_partition_if.cu  catch2_test_device_radix_sort_custom.cu  catch2_test_device_radix_sort_keys.cu  catch2_test_device_reduce.cu  catch2_test_device_reduce_api.cu  catch2_test_device_reduce_by_key.cu  catch2_test_device_reduce_by_key_iterators.cu  catch2_test_device_reduce_deterministic.cu  catch2_test_device_reduce_env.cu  catch2_test_device_reduce_env_api.cu  catch2_test_device_run_length_encode.cu  catch2_test_device_run_length_encode_non_trivial_runs.cu  catch2_test_device_scan.cu  catch2_test_device_scan_by_key.cu  catch2_test_device_scan_by_key_iterators.cu  catch2_test_device_select_flagged.cu  catch2_test_device_select_flagged_if.cu  catch2_test_device_select_if.cu  catch2_test_device_select_unique.cu  catch2_test_device_select_unique_by_key.cu  catch2_test_device_three_way_partition.cu  catch2_test_device_transform.cu  catch2_test_env_launch_helper.h  catch2_test_nvrtc.cu  catch2_test_util_type.cu  test_device_reduce_env_fail.cu  test_device_reduce_unsupported_env_fail.cu  test_device_segmented_sort.cu
cudax/examples/: cub_reduce.cu
docs/: .gitignore  Doxyfile.in  Makefile  README_environment.md  check_env.sh  check_versions.py  conf.py  gen_docs.bash  index.html  requirements-dev.txt  requirements-exact.txt  requirements.txt  test_device_api.rst  version_inventory.md
docs/_ext/: auto_api_generator.py
docs/_sources/: index.rst.txt
docs/cccl/development/: macro.rst
docs/cub/: Doxyfile  api.rst  block_wide.rst  developer_overview.rst  device_wide.rst  index.rst  warp_wide.rst
docs/cub/releases/: changelog.rst
docs/cudax/: Doxyfile  index.rst  memory_resource.rst  stf.rst
docs/libcudacxx/: Doxyfile  index.rst  ptx.rst
docs/thrust/: Doxyfile  api.rst  cmake_options.rst  index.rst  thrust_api.rst
docs/thrust/api_docs/: containers.rst  memory_management.rst  numerics.rst  parallel_execution_policies.rst
docs/thrust/releases/: changelog.rst
thrust/: CMakeLists.txt
thrust/benchmarks/: CMakeLists.txt
thrust/benchmarks/bench/copy/: basic.cu  if.cu
thrust/thrust/: device_malloc.h  device_ptr.h  functional.h  memory.h
thrust/thrust/cmake/: thrust-config.cmake
thrust/thrust/iterator/: zip_iterator.h
(+71 files in other folders)
